 * Form builder now validates against multiple fields with the same name (Richard McMillan)
 * The 'choices' field on the form builder no longer has a maximum length (Johannes Spielmann)
 * The wagtailimages.Filter model has been removed, and converted to a Python class instead (Gagaro)
 * Fix: Email templates and document uploader now support custom `STATICFILES_STORAGE` (Jonny Scholes)
 * Fix: Removed alignment options (deprecated in HTML and not rendered by Wagtail) from `TableBlock` context menu (Moritz Pfeiffer)
 * Fix: Fixed incorrect CSS path on ModelAdmin's "choose a parent page" view
 * Fix: Prevent empty redirect by overnormalisation (Franklin Kingma, Ludolf Takens)

1.5.2 (08.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression in 1.5.1 on editing external links (Stephen Rice)

1.5.1 (07.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
 * Fix: Removing embedded media from rich text by mouse click action now gets correctly registered as a change to the field (Loic Teixeira)
 * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Gagaro)
 * Fix: Rich text editor is no longer broken in settings (Matt Westcott)
 * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
 * Fix: Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
 * Fix: Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
 * Fix: Image listing in the image chooser no longer becomes unpaginated after an invalid upload form submission (Stephen Rice)
 * Fix: Applied correct translation tags for 'permanent' / 'temporary' labels on redirects (Matt Westcott)


1.5 (31.05.2016)
~~~~~~~~~~~~~~~~
